--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 app.services.greeting.message: Hello!
 spring:
+  mvc:
+    static-path-pattern: /static/**
   datasource:
     password: '${SPRING_DATASOURCE_PASSWORD:postgres}'
     url: '${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}'
